# Ligue1-Season-Simulator

./: README.md  pyproject.toml
data_df/: calendar_2019_2020.csv  df_rank_domicile.csv  df_rank_domicile_j27.csv  df_rank_exterieur.csv  df_rank_exterieur_j27.csv
finisher_l1/: functional.py  leagues.py  utils.py
notebooks/: simulation_season.ipynb
