[tool.poetry]
name = "finisher_l1"
version = "0.1.0"
description = ""
authors = ["Shaheen Acheche <shaheen.acheche@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python=">=3.11,<3.13"
pandas = "^2.0.3"
scipy = "^1.11.1"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
taskipy = "^1.10.4"
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.3.0"


[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.mypy]
ignore_missing_imports = true

[tool.taskipy.tasks]
lint = "flake8 --max-line-length 99 --extend-ignore=E203 ."
test = "pytest -v"
type = "mypy ."
format-isort = "isort ."
format-black = "black ."
precommit = "task format-isort && task format-black && task lint && task type"

[build-system]
requires = ["poetry-core>=1.2.3"]
build-backend = "poetry.core.masonry.api"